2010-08-17  Ryan Nunn <colourles@users.sourceforge.net>
	* exult.cc, imagewin/* : Cleaning up scaler handling code, fixing bugs,
	  generally making things more flexible for future changes.
	* shapes/baseinf.h : Fixing a compiler warning

2010-08-17 Dominik Reichardt <dominus@users.sourceforge.net>
	* imagewin/imagewin.cc : commented out the SDL_VideoModeOK check before 
	  switching to fullscreen. This hopefully allows everyone to toggle 
	  fullscreen again. Please let us know.
	
2010-08-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation and FAQ
	
2010-08-13  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/RawAudioSample.cc : Fixing crashes on PPC Macs

2010-07-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc, exult.cc, keys.cc: fixed bug #3011719  avatar can do stuff
	  while passed out. The player will be unable to do almost anything (similar
	  to the originals) if the avatar is asleep, unconscious, paralyzed or dead.
	  As a rule, cheat and mapedit actions are still allowed in these cases, and
	  hackmove allows dragging even in these conditions. Also, purely interface
	  actions will also work -- like esc, scrolling the map with the mouse wheel
	  and so on.
	* configure.ac: AC_PATH_XTRA is actually causing linking problems in Ubuntu
	  Karmic, so it has been removed (again).
	* Others: Eliminated a few warnings.

2010-07-26	Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: Don't expand AC_PATH_XTRA in a conditional. This broke
      configure on all platforms other than linux.

2010-07-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* configure.ac: Added AC_PATH_XTRA macro to fix compilation problems in some
	  Debian and Debian-based distros. Properly quoting text.
	* audio/*: Fixing bug #3016448 -- load_timbres() was being called when it
	  should not, and caused music to stop.

2010-04-19	Marzo Sette Torres Junior <marzojr@yahoo.com>